Feature ETP-267: Refactor code to work with Java 11